2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* parse.hh, parse.cc: Moved to src.

	* music.cc: Rewritten.

	* Makefile.am (music_SOURCES): Added application_map.hh,
	application_map.cc.

2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music.cc, parse.cc, parse.hh: New files.

2007-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Pang!
